--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background: url(wallpaper2you_519263.jpg);">
     <div class="topnav">
         <a class="active" href="index.html">Google</a>
         <a href="viewmail.html">Inbox</a>
